--- a/lts-example-jobclient/lts-example-jobclient-java/src/main/resources/lts.properties
+++ b/lts-example-jobclient/lts-example-jobclient-java/src/main/resources/lts.properties
@@ -1,5 +1,5 @@
 lts.jobclient.cluster-name=test_cluster
-lts.jobclient.registry-address=zookeeper://127.0.0.1:2181
+lts.jobclient.registry-address=zookeeper://s01.soa-solr.ttp.wx:2181
 lts.jobclient.node-group=test_jobClient
 lts.jobclient.use-retry-client=true
 lts.jobclient.configs.job.fail.store=mapdb
